--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
                 <h3>Hello, Word!</h3>
                 <h1>Meu nome é Pedro Lima,</h1>
-                <p> sou estudante de desenvolvimento Web Front End, tenho considerável domínio em CSS, Bulma e Bootstrap, 
+                <p> sou estudante de desenvolvimento Web Front End, tenho conhecimento em HTML, CSS e Bootstrap, 
                     atualmente estudando JavaScript para imersão em um FrameWork Js.</p>
     
                 <button type="button" href="#redes">Entre em contato</button>
