adc de link de um projeto e bg da tag nav

--- a/index.html
+++ b/index.html
@@ -199,7 +199,8 @@
                 <div class="cardprojetos">
                     
                 <div class="imgprojeto">
-                    <h3>Em breve</h3>
+                    <a href="https://pedrolimam.github.io/Landing-page-nutricionista/"><img style="width: 260px; height:100px; border-radius: 8px;" src="img/lpnutri.jpg" alt="imagem de uma lan page">
+                    </a>
                 </div>
 
                 <div class="linguagens">
