adição de legenda

--- a/index.html
+++ b/index.html
@@ -207,14 +207,11 @@
                 <ul>
                     <li>HTML</li>
                     <li>CSS</li>
-                    <li>JavaScript</li>
                 </ul>
                 </div>
 
-                <p><b>Linktree</b></p>
-
                 <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque, quasi?
+                    Landing page com tema de nutricionista, projeto de exposição de modelo de LP.
                 </p>
 
                 </div>
